--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 <body>
      <div class="menu">
         <div class="toggle"><ion-icon name="chatbubbles"></ion-icon></div>
+        <li style="--i:0;--clr:#1877f2;">
+            <a href="https://pt-br.facebook.com/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
+        </li>
+        <li style="--i:1;--clr:#25d366;">
+            <a href="https://web.whatsapp.com/" target="_blank"><ion-icon name="logo-whatsapp"></ion-icon></a>
+        </li>
+        <li style="--i:2;--clr:#1da1f2;">
+            <a href="https://www.linkedin.com/feed/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+        </li>
+        <li style="--i:3;--clr:#ea4c89;">
+            <a href="https://www.instagram.com/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+        </li>
+        <li style="--i:4;--clr:#0a66c2;">
+            <a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoicHQifQ%3D%3D%22%7D" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
+        </li>
+        <li style="--i:5;--clr:#68616693;">
+            <a href="https://github.com/" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+        </li>
+        <li style="--i:6;--clr:#bd081c;">
+            <a href="https://www.youtube.com/" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
+        </li>
      </div>
 
 
