--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
      <div class="menu">
         <div class="toggle"><ion-icon name="chatbubbles"></ion-icon></div>
-        <li style="--i:0;--clr:#1877f2;">
-            <a href="https://pt-br.facebook.com/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
+        <li style="--i:0;--clr:#26bd08;">
+            <a href="https://meet.google.com/?hs=197&pli=1&authuser=0" target="_blank"><ion-icon name="videocam-outline"></ion-icon></a>
         </li>
         <li style="--i:1;--clr:#25d366;">
             <a href="https://web.whatsapp.com/" target="_blank"><ion-icon name="logo-whatsapp"></ion-icon></a>
@@ -31,6 +31,22 @@
         <li style="--i:6;--clr:#bd081c;">
             <a href="https://www.youtube.com/" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
         </li>
+        <li style="--i:7;--clr:#08bd08;">
+            <a href="https://classroom.google.com/u/0/" target="_blank"><ion-icon name="school-outline"></ion-icon></a>
+        </li>
+        
+        <li style="--i:8;--clr:#bd081c;">
+            <a href="https://mail.google.com/mail/u/0/?tab=rm#inbox" target="_blank"><ion-icon name="mail-outline"></ion-icon></a>
+        </li>
+        <li style="--i:9;--clr:#0865bd;">
+            <a href="https://docs.google.com/document/u/0/" target="_blank"><ion-icon name="document-text-outline"></ion-icon></a>
+        </li>
+        <!--<li style="--i:10;--clr:#bdb108;">
+            <a href="https://docs.google.com/presentation/u/0/" target="_blank"><ion-icon name="albums-outline"></ion-icon></a>
+        </li>
+        <li style="--i:11;--clr:#26bd08;">
+            <a href="https://meet.google.com/?hs=197&pli=1&authuser=0" target="_blank"><ion-icon name="videocam-outline"></ion-icon></a>
+        </li>-->
      </div>
 
 
